--- a/ex.1.5
+++ b/ex.1.5
@@ -4,4 +4,6 @@
 
 (test 0 (p))
 
-#| Если интерпретатор использует нормальный порядок вычислений, то на выходе получим 0, т.к. рекурсивная функция не вызовется. Если используется аппликативный порядок, то при редуцировании аргументов процедуры вызовется функция p, что создаст бесконечную рекурсию. |#
+#| Если интерпретатор использует нормальный порядок вычислений, то на выходе получим 0, 
+т.к. рекурсивная функция не вызовется. Если используется аппликативный порядок, 
+то при редуцировании аргументов процедуры вызовется функция p, что создаст бесконечную рекурсию. |#
