--- a/ex.1.7
+++ b/ex.1.7
@@ -26,4 +26,4 @@
        (else (sqrt-iter 0 1 x))
 ))
 
-; На маленкьих числах процедура с такой реализацией good-enough? работает лучше. На больших улучшения нет.
+; На маленьких числах процедура с такой реализацией good-enough? работает лучше. На больших улучшения нет.
