--- a/ex.1.7
+++ b/ex.1.7
@@ -1,5 +1,7 @@
 #lang racket
 
+(define d 1e-15)
+
 (define (sqrt-iter old_guess guess x)(
   if (good-enough? old_guess guess)
     guess
@@ -11,7 +13,7 @@
 ))
 
 (define (good-enough? old_guess guess)(
-  < (abs (- guess old_guess)) (/ guess 10000000)
+  < (abs (- guess old_guess)) (* guess d)
 ))
 
 (define (average x y) (/ (+ x y) 2))
@@ -20,8 +22,10 @@
 
 (define (sqrt x) (
   cond ((< x 0) #f)
-       ((= x 0) 0)
+       ((< x d) 0)
        (else (sqrt-iter 0 1 x))
 ))
+
+(sqrt 0)
 
 ; На маленьких числах процедура с такой реализацией good-enough? работает лучше. На больших улучшения нет.
