--- a/ex.1.9
+++ b/ex.1.9
@@ -4,14 +4,17 @@
       (inc (+ (dec a) b))))
 
 (+ 4 5)
-
-(inc (+ (dec 4) 5))
 (inc (+ 3 5))
+(inc (inc (+ 2 5)))
+(inc (inc (inc (+ 1 5))))
+(inc (inc (inc (inc (+ 0 5)))))
+(inc (inc (inc (inc 5))))
+(inc (inc (inc 6)))
 (inc 8)
-7
+9
+
 
 ; Описан рекурсивный процесс
-
 
 (define (+ a b)
   (if (= a 0)
@@ -19,9 +22,10 @@
       (+ (dec a) (inc b))))
 
 (+ 4 5)
-
-(+ (dec 4) (inc 5))
 (+ 3 6)
+(+ 2 7)
+(+ 1 8)
+(+ 0 9)
 9
 
 ; Описан итеративный процесс
